<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="close">关闭</string>

    <string name="hello">Hello World, ControlPanelActivity!</string>
    <string name="app_name">控制面板</string>
    <string name="description_music">音乐、视频、游戏和其他媒体</string>
    <string name="description_ring_notify">铃声和通知</string>
    <string name="description_alarm">闹钟</string>
    <string name="description_screen_brightness">屏幕亮度</string>
    <string name="description_screen_brightness_check">自动</string>
    
    <!-- 通用 -->
    <string name="commit">提交</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="bluetooth">蓝牙</string>
    <string name="airplane_mode">飞行模式</string>
    
    <!-- launcher -->
    <string name="create_icon_on_launcher">拖动至桌面</string>
    
    <!-- about -->
    <string name="module_about">关于</string>
    
    <!--  settings -->
    <string name="setting_lockscreen">锁屏</string>
    <string name="setting_add_lockscreen_icon">添加一键锁屏图标</string>
    <string name="setting_lockscreen_summary">在桌面创建一键锁屏快捷方式</string>
    <string name="setting_lightcontrol">手电筒</string>
    <string name="setting_add_lightcontrol_icon">添加手电筒图标</string>
    <string name="setting_lightcontrol_summary">在桌面创建手电筒快捷方式</string>
    <string name="lockscreen_added_toast">已在桌面创建快捷方式</string>
    <string name="get_device_admin_toast">请点击“激活”，以启用设备。</string>
	<string name="settings_show_notification_network_speed">状态栏图标显示网速</string>
	<string name="settings_menu_vibrate">震动反馈</string>
    
	<string name="sync_failed">同步失败！</string>
	<string name="checking">正在检查</string>
	<string name="loading_local_module">正在加载本地组件</string>
	
    
    <string name="dialog_close">关闭</string>

	<string name="update">升级</string>
	<string name="install">安装</string>
	<string name="uninstall">卸载</string>
	
	<string name="download_title">正在下载：%s</string>
	
	
	<!-- Control Panel Group -->
	<string name="group_control_panel">控制面板</string>
	
	<!-- Tools Group -->
	<string name="group_tools">工具箱</string>
	<string name="module_light">手电筒</string>
	<string name="module_lock_screen">锁屏</string>
	
	<!-- Settings Group -->
	<string name="group_settings">设置</string>
	<string name="show_tips">显示提示信息</string>
	<string name="setting_preference">偏好</string>
	
	<!-- About Group -->
	<string name="group_about">关于</string>
	
	
	<!-- 设备信息模块 -->
	<string name="device_info_group">设备信息</string>
	<string name="info_group_hardware">硬件信息</string>
	<string name="info_group_system">系统信息</string>
	<string name="info_device_build_id">ID</string>
	<string name="info_device_build_display">DISPLAY</string>
	<string name="info_device_build_product">PRODUCT</string>
	<string name="info_device_build_device">DEVICE</string>
	<string name="info_device_build_board">BOARD</string>
	<string name="info_device_build_cpu_abi">CPU ABI</string>
	<string name="info_device_build_cpu_abi2">CPU ABI2</string>
	<string name="info_device_build_manufacturer">制造商</string>
	<string name="info_device_build_brand">商标</string>
	<string name="info_device_build_model">型号</string>
	<string name="info_device_build_bootloader">BOOTLOADER</string>
	<string name="info_device_build_radio">RADIO</string>
	<string name="info_device_build_hardware">HARDWARE</string>
	<string name="info_device_build_serial">序列号</string>
	<string name="info_device_display_resolution">分辨率</string>
	<string name="info_device_ram_total">RAM</string>
	<string name="info_device_system_version">系统版本</string>
	<string name="info_device_kernal_version">内核版本</string>
	<string name="info_device_compile_time">编译日期</string>
	<string name="info_device_version">版本号</string>
	
	<!-- 显示控制模块 -->
	<string name="display">显示</string>
	
	<!-- 悬浮窗 -->
    <string name="module_float_panel">快捷面板</string>
    <string name="mobile_data">数据</string>
    <string name="setting_on">开启</string>
    <string name="setting_off">关闭</string>
    <string name="setting_display_in_notification">在通知栏中显示快捷方式</string>
    <string name="setting_indicator">指示器</string>
    <string name="setting_display_indicator">显示指示器</string>
    <string name="setting_indicator_type">指示器显示内容</string>
    <string name="setting_indicator_only_in_launcher">仅在桌面显示指示器</string>
    <string-array name="indicator_types">
        <item>内存使用率</item>
        <item>当前网速</item>
        <!-- <item>自定义文字</item>  -->
    </string-array>
    <string-array name="indicator_type_values">
        <item>memoryused</item>
        <item>networkspeed</item>
        <!-- <item>text</item>  -->
    </string-array>
    <string name="setting_indicator_auto_edge">边缘吸附</string>
    <string name="setting_theme">主题设置</string>
    <string name="setting_theme_summary">设置背景颜色、透明度</string>
    <string name="setting_theme_save">保存</string>
    <string name="setting_theme_default">还原默认值</string>
    <string name="setting_theme_swap">切换配色区</string>
    <string name="setting_theme_alpha">透明度</string>
    <string name="setting_theme_red">红</string>
    <string name="setting_theme_green">绿</string>
    <string name="setting_theme_blue">蓝</string>
    <string name="setting_theme_select_area">当前配色区域：%s</string>
    <string name="setting_theme_area_title">标题栏</string>
    <string name="setting_theme_area_container">正文</string>
    <string name="notification_summary">点击打开快捷面板</string>
    <string name="setting_indicator_lock">锁定位置</string>
    <string name="setting_statusbar_mode">状态栏模式</string>
    <string name="setting_statusbar_mode_summary">将指示器锁定在状态栏</string>
    
    <!-- appmanager模块  -->
    <string name="module_app_manager">应用管理</string>
    <string name="one">1</string>
    <string name="list_title_star">收藏(%s)</string>
    <string name="list_title_result">结果(%s)</string>
    <string name="no_star">没有收藏夹</string>
    <string name="no_result">无匹配</string>
    <string name="has_key_tone">开启按键音</string>
    <string name="open_up">OPEN</string>
    
    <!-- 反馈模块  -->
    <string name="module_feedback">反馈</string>
    <string name="feedback1">投诉</string>
    <string name="feedback2">建议</string>
    <string name="feedback3">有话说</string>
    <string name="thx_for_feedback">非常感谢您的反馈！</string>
    
    <!-- 广告 应用推荐 -->
    <string name="app_recommend">推荐</string>
    
    <!-- 音量 -->
    <string name="module_sound">音量</string>
    <string name="ringer_mode_normal">标准模式</string>
    <string name="ringer_mode_vibrate">振动模式</string>
    <string name="ringer_mode_silent">静音模式</string>
    <string name="current">（当前）</string>
    <string name="ringer_mode_change">铃声切换为 </string>
    <string name="silent_all">完全静音</string>
    
    <string name="flash_light">手电筒</string>
    <string name="flash_light_on">手电筒（已开启）</string>
    <string name="flash_light_off">手电筒（已关闭）</string>
    
    <string name="module_ringer_mode">铃声模式</string>
    
    <string name="module_network">网络</string>
    <string name="menu_mobile">移动网络</string>
    <string name="menu_wifi">WLAN</string>
    
    <string name="setting_error">设置失败</string>
    
    <string name="setting_indicator">指示器设置</string>
    <string name="indicator_mode">指示器显示</string>
    <string name="indicator_mode_memory">内存使用率</string>
    <string name="indicator_mode_cpu">CPU使用率</string>
    <string name="indicator_mode_battery">电池使用率</string>
    
    <string name="device_monitor">状态监控</string>
    <string name="battery_remaining">电量剩余</string>
    <string name="memory_remaining">内存剩余</string>
</resources>