<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:controlpanel="http://schemas.android.com/apk/res/cn.kli.controlpanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <cn.kli.controlpanel.settings.SettingItemToggle
        android:id="@+id/sit_notif_network_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        controlpanel:setting_title="@string/settings_show_notification_network_speed"
        />
        
    <cn.kli.controlpanel.settings.SettingItemToggle
        android:id="@+id/sit_menu_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        controlpanel:setting_title="@string/settings_menu_vibrate"
        />
    

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indicator_mode" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/setting_divider"/>
    
    <RadioGroup
        android:id="@+id/rg_indicator_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/rb_memory_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indicator_mode_memory" />

        <RadioButton
            android:id="@+id/rb_battery_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indicator_mode_battery" />

        <RadioButton
            android:id="@+id/rb_cpu_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indicator_mode_cpu"
            android:visibility="gone" />
    </RadioGroup>

</LinearLayout>
